organized mixin folder, fixed model offsets (CarriedBlockLayer, SnowGolemHeadLayer, StuckInBodyLayer) fixed slime and bee babyfication, fixed wither head position, added witch babyfing near entities goal