@@ -1,12 +1,12 @@
-package net.tinyallies.common.mixin;
+package net.tinyallies.common.mixin.client;
 
 import com.google.common.collect.ImmutableList;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
+import net.minecraft.client.model.GhastModel;
 import net.minecraft.client.model.HierarchicalModel;
-import net.minecraft.client.model.IronGolemModel;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.world.entity.Entity;
 import net.tinyallies.common.util.ModUtil;
@@ -15,22 +15,18 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.Unique;
 
-@Environment(value= EnvType.CLIENT)
-@Mixin(IronGolemModel.class)
-public abstract class MixinIronGolemModel <T extends Entity>
-		extends HierarchicalModel<T> {
-	@Shadow @Final private ModelPart leftArm;
-	@Shadow @Final private ModelPart rightArm;
-	@Shadow @Final private ModelPart head;
-	@Shadow @Final private ModelPart rightLeg;
-	@Shadow @Final private ModelPart leftLeg;
+import java.util.List;
+@Environment(EnvType.CLIENT)
+@Mixin(GhastModel.class)
+public abstract class MixinGhastModel <T extends Entity> extends HierarchicalModel<T> {
 
-	@Shadow public abstract ModelPart root();
+	@Shadow @Final private ModelPart root;
+	@Shadow @Final private ModelPart[] tentacles;
 
 	@Override
 	public void renderToBuffer(PoseStack pPoseStack, VertexConsumer pBuffer, int pPackedLight, int pPackedOverlay, float pRed, float pGreen, float pBlue, float pAlpha) {
 		if (this.young) {
-			ModUtil.babyfyModel(headParts(), bodyParts(), 19F, 1F, pPoseStack, pBuffer, pPackedLight, pPackedOverlay,
+			ModUtil.babyfyModel(headParts(), bodyParts(),0.5F ,0.4F, 24F, 0F, 2.3F ,pPoseStack, pBuffer, pPackedLight, pPackedOverlay,
 					pRed, pGreen, pBlue, pAlpha);
 		}
 		else {
@@ -40,11 +36,11 @@ public abstract class MixinIronGolemModel <T extends Entity>
 
 	@Unique
 	protected Iterable<ModelPart> headParts() {
-		return ImmutableList.of(head);
+		return ImmutableList.of(root.getChild("body"));
 	}
 
 	@Unique
 	protected Iterable<ModelPart> bodyParts() {
-		return ImmutableList.of(root().getChild("body") , leftArm, rightArm, leftLeg, rightLeg);
+		return List.of(tentacles);
 	}
 }
