@@ -1,12 +1,12 @@
-package net.tinyallies.common.mixin;
+package net.tinyallies.common.mixin.client;
 
 import com.google.common.collect.ImmutableList;
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
-import net.minecraft.client.model.GhastModel;
 import net.minecraft.client.model.HierarchicalModel;
+import net.minecraft.client.model.SnowGolemModel;
 import net.minecraft.client.model.geom.ModelPart;
 import net.minecraft.world.entity.Entity;
 import net.tinyallies.common.util.ModUtil;
@@ -15,18 +15,20 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.Unique;
 
-import java.util.List;
-@Environment(EnvType.CLIENT)
-@Mixin(GhastModel.class)
-public abstract class MixinGhastModel <T extends Entity> extends HierarchicalModel<T> {
-
+@Environment(value= EnvType.CLIENT)
+@Mixin(SnowGolemModel.class)
+public abstract class MixinSnowGolemModel <T extends Entity>
+		extends HierarchicalModel<T> {
+	@Shadow @Final private ModelPart upperBody;
+	@Shadow @Final private ModelPart leftArm;
+	@Shadow @Final private ModelPart rightArm;
 	@Shadow @Final private ModelPart root;
-	@Shadow @Final private ModelPart[] tentacles;
+	@Shadow @Final private ModelPart head;
 
 	@Override
 	public void renderToBuffer(PoseStack pPoseStack, VertexConsumer pBuffer, int pPackedLight, int pPackedOverlay, float pRed, float pGreen, float pBlue, float pAlpha) {
 		if (this.young) {
-			ModUtil.babyfyModel(headParts(), bodyParts(),0.5F ,0.4F, 24F, 0F, 2.3F ,pPoseStack, pBuffer, pPackedLight, pPackedOverlay,
+			ModUtil.babyfyModel(headParts(), bodyParts(), 15F, 0F, pPoseStack, pBuffer, pPackedLight, pPackedOverlay,
 					pRed, pGreen, pBlue, pAlpha);
 		}
 		else {
@@ -36,11 +38,11 @@ public abstract class MixinGhastModel <T extends Entity> extends HierarchicalMod
 
 	@Unique
 	protected Iterable<ModelPart> headParts() {
-		return ImmutableList.of(root.getChild("body"));
+		return ImmutableList.of(head);
 	}
 
 	@Unique
 	protected Iterable<ModelPart> bodyParts() {
-		return List.of(tentacles);
+		return ImmutableList.of(root.getChild("lower_body"), upperBody, leftArm, rightArm);
 	}
 }
